--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "chai": "^5.2.0",
     "desm": "^1.3.1",
     "eslint": "^9.24.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
     "express": "^5.1.0",
     "fastify": "^5.2.2",
@@ -38,14 +37,15 @@
     "koa-body": "^6.0.1",
     "koa-mount": "^4.0.0",
     "lodash": "^4.17.21",
-    "mocha": "^11.2.0",
+    "mocha": "^11.2.1",
     "moment": "^2.30.1",
     "openid-client": "^6.4.1",
     "selfsigned": "^2.4.1",
     "sinon": "^20.0.0",
     "supertest": "^7.1.0",
     "timekeeper": "^2.3.1",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
-    "undici": "^7.7.0"
+    "undici": "^7.8.0"
   }
 }
