--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
 		"test-ci": "node ./test/ci --experimental-strip-types"
 	},
 	"dependencies": {
+		"@ant-design/cssinjs": "^1.23.0",
+		"@elysiajs/html": "^1.2.0",
 		"@koa/cors": "^5.0.0",
 		"@koa/router": "^13.1.0",
+		"antd": "^5.24.9",
 		"debug": "^4.4.0",
 		"elysia": "^1.2.25",
 		"eta": "^3.5.0",
@@ -18,7 +21,9 @@
 		"nanoid": "^5.1.5",
 		"oidc-token-hash": "^5.1.0",
 		"quick-lru": "^7.0.1",
-		"raw-body": "^3.0.0"
+		"raw-body": "^3.0.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0"
 	},
 	"devDependencies": {
 		"@elysiajs/eden": "^1.2.0",
@@ -27,6 +32,8 @@
 		"@hapi/hapi": "^21.4.0",
 		"@koa/ejs": "^5.1.0",
 		"@types/bun": "^1.2.9",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.3",
 		"base64url": "^3.0.1",
 		"chai": "^5.2.0",
 		"desm": "^1.3.1",
