--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
 		"sinon": "^20.0.0",
 		"timekeeper": "^2.3.1",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.1",
-		"undici": "^7.8.0"
+		"typescript-eslint": "^8.29.1"
 	}
 }
