--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
 	"type": "module",
 	"scripts": {
 		"format": "eslint lib example certification test docs --fix",
+		"build": "bun build --outdir=public ./lib/interactions/loginClient.tsx",
+		"watch": "bun build --outdir=public --minify ./lib/interactions/loginClient.tsx --watch",
 		"test": "bun test $(fd .spec.ts test)",
 		"test-ci": "node ./test/ci --experimental-strip-types"
 	},
 	"dependencies": {
 		"@ant-design/cssinjs": "^1.23.0",
+		"@ant-design/icons": "^6.0.0",
+		"@elysiajs/static": "^1.3.0",
 		"@koa/cors": "^5.0.0",
 		"@koa/router": "^13.1.0",
 		"antd": "^5.24.9",
 		"debug": "^4.4.0",
-		"elysia": "^1.3.0",
+		"elysia": "^1.3.1",
 		"eta": "^3.5.0",
 		"jose": "^6.0.10",
 		"jsesc": "^3.1.0",
