Refactor AccessToken model and not to use provider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"jsx": "react",
+		"noEmit": true,
 		"typeRoots": ["types/", "node_modules/@types"]
 	},
 	"include": ["lib/**/*.ts", "test/**/*.ts"],
