--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"format": "eslint lib example certification test docs --fix",
 		"build": "bun build --outdir=dist --minify ./lib/interactions/loginClient.tsx",
-		"watch": "bun build --outdir=dist --minify ./lib/interactions/loginClient.tsx --watch"
+		"watch": "bun build --outdir=dist --minify ./lib/interactions/loginClient.tsx --watch",
+		"start": "bun lib/index.ts"
 	},
 	"dependencies": {
 		"@ant-design/cssinjs": "^1.24.0",
