--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
 	"type": "module",
 	"scripts": {
 		"format": "eslint lib example certification test docs --fix",
-		"build": "bun build --outdir=dist --minify ./lib/interactions/loginClient.tsx",
-		"watch": "bun build --outdir=dist --minify ./lib/interactions/loginClient.tsx --watch",
+		"build": "bun build --outdir=public --minify ./lib/interactions/loginClient.tsx",
+		"watch": "bun build --outdir=public --minify ./lib/interactions/loginClient.tsx --watch",
 		"start": "bun lib/index.ts"
 	},
 	"dependencies": {
 		"@ant-design/cssinjs": "^2.0.1",
 		"@ant-design/icons": "^6.1.0",
 		"@elysiajs/static": "^1.4.7",
-		"antd": "^6.1.1",
+		"antd": "^6.1.2",
 		"debug": "^4.4.3",
 		"elysia": "^1.4.19",
 		"jose": "^6.1.3",
@@ -25,13 +25,13 @@
 		"react-dom": "^19.2.3"
 	},
 	"devDependencies": {
-		"@elysiajs/eden": "^1.4.5",
+		"@elysiajs/eden": "^1.4.6",
 		"@eslint/js": "^9.39.2",
-		"@types/bun": "^1.3.4",
+		"@types/bun": "^1.3.5",
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"base64url": "^3.0.1",
-		"chai": "^6.2.1",
+		"chai": "^6.2.2",
 		"desm": "^1.3.1",
 		"eslint": "^9.39.2",
 		"jiti": "^2.6.1",
@@ -39,9 +39,9 @@
 		"moment": "^2.30.1",
 		"openid-client": "^6.8.1",
 		"prettier": "^3.7.4",
-		"sinon": "^21.0.0",
+		"sinon": "^21.0.1",
 		"timekeeper": "^2.3.1",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.0"
+		"typescript-eslint": "^8.50.1"
 	}
 }
