--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
 		"sourceMap": true,
 		"outDir": "dist",
 		"baseUrl": ".",
-		"skipLibCheck": true,
 		"strict": true,
-		"jsx": "react",
+		"jsxImportSource": "react",
+		"jsx": "react-jsx",
 		"noEmit": true,
 		"typeRoots": ["types/", "node_modules/@types"]
 	},
